# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

# put build products in _build wherever possible.

[metadata]
name = muck
version = 0.0.3
license = CC0
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/muck
description = Muck is a build tool for data projects that automatically calculates dependencies.
packages =
  muck
  muck.pithy
keywords =
  build
  build system
  build tool
  data science
  diff
  documentation
  markdown
  markup
  pat
  patch
  scripting
  writeup
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Information Technology
  Intended Audience :: Science/Research
  License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
  Programming Language :: Python :: 3 :: Only
  Topic :: Documentation
  Topic :: Education
  Topic :: Internet
  Topic :: Multimedia
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Documentation
  Topic :: Text Processing
  Topic :: Text Processing :: Markup
  Topic :: Text Processing :: Markup :: HTML

[build]
build-base=_build

[sdist]
dist-dir=_build

[mypy]
python_version = 3.8
cache_dir = _build/mypy_cache
mypy_path = pithy/typestubs
sqlite_cache = True

check_untyped_defs = True
disallow_any_unimported = False
disallow_incomplete_defs = False
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = False
show_column_numbers = True
show_none_errors = True
strict_equality = False
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
